fix mobile spacing

--- a/src/components/Instagram/Instagram.module.scss
+++ b/src/components/Instagram/Instagram.module.scss
@@ -5,9 +5,6 @@
   color: #08142d;
   overflow: hidden;
   position: relative;
-  @include mobile {
-    padding: 4rem 0 0;
-  }
 }
 
 .instagramContent {
